fix szise img on mobile

--- a/src/components/PokemonCard/pokemonCard.scss
+++ b/src/components/PokemonCard/pokemonCard.scss
@@ -13,8 +13,8 @@
   padding: 1rem;
   border-radius: 0.5rem;
   & img {
-    height: 400px;
-    width: 100%;
+    height: 200px;
+    width: 90%;
     margin: auto;
   }
 }
